# adblock2privoxy

./: .gitattributes  .gitignore  .project  .travis.yml  AdBlock2Privoxy.cabal  Dockerfile  README  README.md  README.rst  Setup.hs  ab2p.action  ab2p.filter  adblock2privoxy.cabal  changelog  com.github.essandess.adblock2privoxy.nginx.plist  com.github.essandess.adblock2privoxy.plist  default.html  nginx.conf  notes.txt  openssl.cnf  parser  stat.txt  testData
.github/workflows/: docker-image.yml  docker-publish.yml  haskell.yml
adblock2privoxy/: .project  CHANGELOG.md  INSTALL.rst  README.rst  adblock2privoxy.cabal  changelog  stack.yaml  stack.yaml.orig
adblock2privoxy-utils/: .project  adblock2privoxy-utils.cabal  stack.yaml
adblock2privoxy-utils/automation/: .gitignore  build_all.sh  make_rpm.sh  run_adblock2privoxy.sh  run_aws_build.sh
adblock2privoxy-utils/automation/run/: ab2p.sh  ab2p_aws.sh  adblock2privoxy-1.3.3-1.fc20.x86_64.rpm  all_rus.task  aws_pipeline.json  easylist.task  easylist_advblock.task  easylist_easyprivacy.task
adblock2privoxy-utils/distribution/: make_rpm.sh  resolve_cabal_variables.sh
adblock2privoxy-utils/distribution/rpmbuild/SOURCES/: download-source.url
adblock2privoxy-utils/launches/: adblock2privoxy (no args).launch  adblock2privoxy (run file use task).launch  adblock2privoxy (run file).launch  adblock2privoxy (run web).launch  adblock2privoxy (task run web).launch  adblock2privoxy (task run).launch  adblock2privoxy-utils.launch
adblock2privoxy-utils/man/man1/: adblock2privoxy.1
adblock2privoxy-utils/src/: CabalTemplate.hs  DebControl.hs  Main.hs  ManPage.hs  RootPath.hs  RpmSpec.hs
adblock2privoxy/distribution/: buildWin.bat  makeCentosRpm.sh  makeDeb.sh  makeFedoraRpm.sh  makeFedoraRpm.sh~  makeRpm.sh
adblock2privoxy/distribution/debbuild/DEBIAN/: control
adblock2privoxy/distribution/rpmbuild/SPECS/: adblock2privoxy.spec
adblock2privoxy/man/man1/: adblock2privoxy.1
adblock2privoxy/src/: ElementBlocker.hs  InputParser.hs  Main.hs  Network.hs  OptionsConverter.hs  ParsecExt.hs  ParserExtTests.hs  Paths_adblock2privoxy.hs  PatternConverter.hs  PatternConverter.hs.orig  PolicyTree.hs  PopupBlocker.hs  ProgramOptions.hs  SourceInfo.hs  Statistics.hs  Task.hs  Templates.hs  UrlBlocker.hs  UrlBlocker.hs-boot  Utils.hs
adblock2privoxy/templates/: ab2p.system.action  ab2p.system.action.debug  ab2p.system.filter  ab2p.system.filter.debug
configTemplates/: adblock2.action  adblock2.filter
css/: ab2p.common.css
css/ac/solarmovie/: ab2p.css
css/ad/bre/: ab2p.css
css/ae/dcn/: ab2p.css
css/ae/propertyfinder/: ab2p.css
css/ae/thenational/: ab2p.css
css/ae/whitepages/: ab2p.css
css/ae/yellowpages/: ab2p.css
css/aero/aerotime/: ab2p.css
css/ag/austrianairlines/: ab2p.css
css/ag/designm/: ab2p.css
css/ag/eztv/: ab2p.css
css/ag/primewire/: ab2p.css
css/ag/solarmovie/: ab2p.css
css/ag/watch-series/: ab2p.css
css/ag/yts/: ab2p.css
css/am/armenpress/: ab2p.css
css/am/bittorrent/: ab2p.css
css/am/news/: ab2p.css
css/am/panorama/: ab2p.css
css/am/statigr/: ab2p.css
css/asia/propertysold/: ab2p.css
css/asia/proxyserver/: ab2p.css
css/at/derstandard/: ab2p.css
css/at/futurezone/: ab2p.css
css/at/hearthis/: ab2p.css
css/at/herold/: ab2p.css
css/at/ing-diba/: ab2p.css
css/at/novasol/: ab2p.css
css/at/orf/: ab2p.css
css/at/projectfreetv/: ab2p.css
css/at/soeren-hentzschel/: ab2p.css
css/at/thedailywh/: ab2p.css
css/at/transfermarkt/: ab2p.css
css/at/willhaben/: ab2p.css
css/az/apa/: ab2p.css
css/az/azernews/: ab2p.css
css/az/sputnik/: ab2p.css
css/az/today/: ab2p.css
css/be/aalst/: ab2p.css
css/be/airbnb/: ab2p.css
css/be/bnpparibasfortis/: ab2p.css
css/be/cam4/: ab2p.css
css/be/ethias/: ab2p.css
css/be/gamemania/: ab2p.css
css/be/knack/: ab2p.css
css/be/kookeiland/: ab2p.css
css/be/landrover/: ab2p.css
css/be/large/: ab2p.css
css/be/lecho/: ab2p.css
css/be/leforem/: ab2p.css
css/be/logic-immo/: ab2p.css
css/be/moniteurautomobile/: ab2p.css
css/be/orange/: ab2p.css
css/be/postnl/: ab2p.css
css/be/randstad/: ab2p.css
css/be/rtbf/: ab2p.css
css/be/rtl/: ab2p.css
css/be/selexion/: ab2p.css
css/be/skins/: ab2p.css
css/be/standaard/: ab2p.css
css/be/uitinvlaanderen/: ab2p.css
css/bg/dnevnik/: ab2p.css
css/bg/lexus-bulgaria/: ab2p.css
css/bh/dt/: ab2p.css
css/biz/760kgu/: ab2p.css
css/biz/adjet/: ab2p.css
css/biz/billboard/: ab2p.css
css/biz/blackcatradio/: ab2p.css
css/biz/coindigger/: ab2p.css
css/biz/fastalp/: ab2p.css
css/biz/fileshut/: ab2p.css
css/biz/gamesindustry/: ab2p.css
css/biz/girlsgames/: ab2p.css
css/biz/howwe/: ab2p.css
css/biz/id-box/: ab2p.css
css/biz/in-trend/: ab2p.css
css/biz/mobile-ent/: ab2p.css
css/biz/next-gen/: ab2p.css
css/biz/pcr-online/: ab2p.css
css/biz/pojo/: ab2p.css
css/biz/share-links/: ab2p.css
css/biz/share-online/: ab2p.css
css/biz/toynews-online/: ab2p.css
css/biz/watchseries/: ab2p.css
css/biz/xxxgames/: ab2p.css
css/blog/ctrl/: ab2p.css
css/brussels/agenda/: ab2p.css
css/brussels/visit/: ab2p.css
css/bw/mmegi/: ab2p.css
css/by/gismeteo/: ab2p.css
css/cn/: ab2p.css
css/debug/: ab2p.common.css
distribution/: build_all.sh  run_aws_build.sh
distribution/debian/: changelog  control  copyright
easylist/: adblock-list.txt  antiadblockfilters.txt  malwaredomains_full.txt
man/man1/: adblock2privoxy.1
privoxy/: ab2p.filter  ab2p.system.action  ab2p.system.filter
src/: ElementBlocker.hs  Foo.hs  HeadersMatcher.hs  InputParser.hs  Main.hs  Normalizer.hs  OptionsConverter.hs  ParsecExt.hs  ParserExtTests.hs  ParserExtTests.hs-boot  PatternConverter.hs  PatternConvertor.hs  PolicyTree.hs  PopupBlocker.hs  SourceInfo.hs  Statistics.hs  Task.hs  Templates.hs  UrlBlocker.hs  UrlBlocker.hs-boot  Utils.hs  UtilsOld.hs
templates/: ab2p.system.action  ab2p.system.filter
test-data/: advblock.txt  bitblock.txt  cntblock.txt  easylist.txt  easyprivacy.txt  fanboy-annoyance.txt  my.txt  my1.txt  privoxy-bl-upd.pl  testData
(+12378 files in other folders)
