name:           AdBlock2Privoxy
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         alexey

executable AdBlock2Privoxy
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   MissingH,
                   parsec,
                   parsec-permutation,
                   mtl,
                   containers,
                   filepath,
                   directory
  ghc-options:     -Wall
  other-modules:   
                   Normalizer,
                   InputParser,
                   ParsecExt,
                   Foo,
                   Utils,
                   ParserExtTests,
                   PatternConvertor,
                   ElementBlocker,
                   PolicyTree,
                   HeadersMatcher

