name:           AdBlock2Privoxy
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         alexey

executable AdBlock2Privoxy
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec,
                   mtl,
                   containers,
                   filepath,
                   directory,
                   MissingH,
                   parsec-permutation
  ghc-options:     -Wall
  other-modules:   
                   InputParser,
                   ParsecExt,
                   Foo,
                   Utils,
                   ParserExtTests,
                   ElementBlocker,
                   PolicyTree,
                   OptionsConverter,
                   PatternConverter,
                   UrlBlocker,
                   Templates,
                   PopupBlocker,
                   Statistics

