name:           adblock2privoxy
version:        1.0
cabal-version:  >= 1.6
build-type:     Simple
author:         Alexey Zubritsky
data-files:     
                templates/ab2p.system.action, 
                templates/ab2p.system.filter
license:        GPL-3
maintainer:     a@zubr.me
license-file:   LICENSE
stability:      stable
synopsis:       Convert adblock config files to privoxy format
description:    
                     Almost all adblock features are supported including
                     - block/unblock requests (on privoxy)
                       all syntax features are supported except for regex templates matching host name
                     - hide/unhide page elements (via CSS)
                       all syntax features are supported
                     - all block request options except for outdated ones:
                       Supported: script, image, stylesheet, object, xmlhttprequest, object-subrequest, subdocument, 
                                  document, elemhide, other, popup, third-party, domain=..., match-case, donottrack
                       Unsupported: collapse, background, xbl, ping and dtd
                     .  
                     Tested with privoxy version 3.0.21.
                     Element blocking feature requires a webserver to work. See Nginx and Apache config examples provided.

executable adblock2privoxy
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec,
                   mtl,
                   containers,
                   filepath,
                   directory,
                   MissingH,
                   parsec-permutation,
                   time >=1.4.0 && <1.5,
                   old-locale >=1.0.0 && <1.1,
                   strict >=0.3.2 && <0.4
  ghc-options:     -Wall
  other-modules:   
                   InputParser,
                   ParsecExt,
                   Utils,
                   ParserExtTests,
                   ElementBlocker,
                   PolicyTree,
                   OptionsConverter,
                   PatternConverter,
                   UrlBlocker,
                   Templates,
                   PopupBlocker,
                   Statistics,
                   SourceInfo

