name:           adblock2privoxy
version:        1.2.2
cabal-version:  >= 1.6
build-type:     Make
author:         Alexey Zubritsky
data-files:     
                templates/ab2p.system.action, 
                templates/ab2p.system.filter
extra-source-files: 
                README
                changelog
license:        GPL-3
maintainer:     Alexey Zubritsky
license-file:   LICENSE
stability:      stable
synopsis:       Convert adblock config files to privoxy format
description:    
                       [AdBlock Plus] browser plugin has great block list files provided by big community,
                       but it is client software and cannot work on a server as proxy.
                       .
                       [Privoxy] proxy has good potential to block ads at server side,
                       but it experiences acute shortage of updated block lists.
                       .
                       This software converts adblock lists to privoxy config files format.
                       .
                       Almost all adblock features are supported including
                       .
                       * block/unblock requests (on privoxy)
                       .
                       all syntax features are supported except for regex templates matching host name
                       .
                       * hide/unhide page elements (via CSS)
                       .
                       all syntax features are supported
                       .
                       * all block request options except for outdated ones:
                       .
                       Supported: script, image, stylesheet, object, xmlhttprequest, object-subrequest, subdocument,
                       document, elemhide, other, popup, third-party, domain=..., match-case, donottrack
                       .
                       Unsupported: collapse, background, xbl, ping and dtd
homepage:       https://projects.zubr.me/wiki/adblock2privoxy
category:       Web

executable adblock2privoxy
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4 && < 5,
                   parsec,
                   mtl,
                   containers,
                   filepath,
                   directory,
                   MissingH,
                   parsec-permutation,
                   time >=1.4.0 && <1.5,
                   old-locale >=1.0.0 && <1.1,
                   strict >=0.3.2 && <0.4,
                   network >=2.4.2 && <2.5,
                   http-conduit,
                   text >=0.11.3 && <0.12
  ghc-options:     -Wall
  other-modules:   
                   ElementBlocker,
                   InputParser,
                   OptionsConverter,
                   ParsecExt,
                   PatternConverter,
                   PolicyTree,
                   PopupBlocker,
                   SourceInfo,
                   Statistics,
                   Task,
                   Templates,
                   UrlBlocker,
                   Utils

source-repository this
                type:     git
                location: ​http://projects.zubr.me/adblock2privoxy.git
                tag:      1.2.2
