name:                adblock2privoxy
version:             1.3.2
cabal-version:       >= 1.10
build-type:          Simple
tested-with:         
                     GHC==7.8.3,
                     GHC==7.6.3
author:              Alexey Zubritsky <adblock2privoxy@zubr.me>
data-files:          
                templates/ab2p.system.action,
                templates/ab2p.system.filter
extra-source-files:  
                README.rst
                INSTALL.rst
                changelog
                man/man1/adblock2privoxy.1
                distribution/rpmbuild/SPECS/adblock2privoxy.spec
                distribution/buildWin.bat
                distribution/makeFedoraRpm.sh
license:             GPL-3
maintainer:          Alexey Zubritskiy <adblock2privoxy@zubr.me>
license-file:        LICENSE
stability:           stable
homepage:            https://projects.zubr.me/wiki/adblock2privoxy
category:            Web
synopsis:            Convert adblock config files to privoxy format
description:         
                       AdBlock Plus browser plugin has great block list files provided by big community,
                       but it is client software and cannot work on a server as proxy.
                       .
                       Privoxy proxy has good potential to block ads at server side,
                       but it experiences acute shortage of updated block lists.
                       .
                       This software converts adblock lists to privoxy config files format.
                       .
                       Almost all adblock features are supported including
                       .
                       * block/unblock requests (on privoxy)
                       .
                       all syntax features are supported except for regex templates matching host name
                       .
                       * hide/unhide page elements (via CSS)
                       .
                       all syntax features are supported
                       .
                       * all block request options except for outdated ones:
                       .
                       Supported: script, image, stylesheet, object, xmlhttprequest, object-subrequest, subdocument,
                       document, elemhide, other, popup, third-party, domain=..., match-case, donottrack
                       .
                       Unsupported: collapse, background, xbl, ping and dtd


executable adblock2privoxy
  hs-source-dirs:  src
  main-is:         Main.hs
  default-language: Haskell2010
  default-extensions:
                   RankNTypes, 
                   ScopedTypeVariables, 
                   FlexibleInstances,
                   GeneralizedNewtypeDeriving
  build-depends:   
                   base >= 4 && < 5,
                   parsec,
                   mtl,
                   containers,
                   filepath,
                   directory,
                   MissingH,
                   parsec-permutation,
                   time >=1.4,
                   old-locale >=1.0,
                   strict >=0.3,
                   network >=2.4,
                   http-conduit,
                   text >=0.11,
                   network-uri 
  ghc-options:     -Wall
  other-modules:   
                   ElementBlocker,
                   InputParser,
                   OptionsConverter,
                   ParsecExt,
                   Paths_adblock2privoxy,
                   PatternConverter,
                   PolicyTree,
                   PopupBlocker,
                   ProgramOptions,
                   SourceInfo,
                   Statistics,
                   Task,
                   Templates,
                   UrlBlocker,
                   Utils

source-repository this
  type:      git
  location:  ​http://projects.zubr.me/adblock2privoxy.git
  subdir:    adblock2privoxy
  tag:       1.3.2