name:           adblock2privoxy
version:        2.3.0
cabal-version:  >= 1.10
build-type:     Simple
tested-with:
                GHC==9.6.3
author:         Alexey Zubritsky <adblock2privoxy@zubr.me>, Steven Thomas Smith <steve.t.smith@gmail.com>
data-files:
                templates/ab2p.system.action,
                templates/ab2p.system.filter
extra-source-files:
                stack.yaml
                README.rst
                INSTALL.rst
                changelog
                man/man1/adblock2privoxy.1
                distribution/rpmbuild/SPECS/adblock2privoxy.spec
                distribution/buildWin.bat
                distribution/makeRpm.sh
                distribution/debbuild/DEBIAN/control
                distribution/makeDeb.sh
license:        GPL-3
maintainer:     Steven Thomas Smith <steve.t.smith@gmail.com>
license-file:   LICENSE
stability:      stable
homepage:       https://github.com/essandess/adblock2privoxy
category:       Web
synopsis:       Convert adblock config files to privoxy format
description:
                AdBlock Plus browser plugin has great block list files provided by big community,
                but it is client software and cannot work on a server as proxy.
                .
                Privoxy proxy has good potential to block ads at server side,
                but it experiences acute shortage of updated block lists.
                .
                This software converts adblock lists to privoxy config files format.
                .
                Almost all adblock features are supported including
                .
                * block/unblock requests (on privoxy)
                .
                all syntax features are supported except for regex templates matching host name
                .
                * hide/unhide page elements (via CSS)
                .
                all syntax features are supported
                .
                * all block request options except for outdated ones:
                .
                Supported: script, image, stylesheet, object, xmlhttprequest, object-subrequest, subdocument,
                document, elemhide, other, popup, third-party, domain=..., match-case, donottrack
                .
                Unsupported: collapse, background, xbl, ping and dtd


executable adblock2privoxy
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  default-extensions:
                RankNTypes,
                ScopedTypeVariables,
                FlexibleInstances,
                GeneralizedNewtypeDeriving,
                FlexibleContexts
  build-depends:
                base >= 4 && < 9.9,
                MissingH >= 1.6.0 && < 1.7,
                containers >= 0.6.7 && < 0.7,
                directory >= 1.3.8 && < 1.4,
                filepath >= 1.4.200 && < 1.5,
                mtl >= 2.3.1 && < 2.4,
                time >= 1.12.2 && < 1.13,
                network >= 3.1.4 && < 3.2,
                old-locale >= 1.0.0 && < 1.1,
                parsec >= 3.1.16 && < 3.2,
                text >= 2.0.2 && < 2.1,
                case-insensitive >= 1.2.1 && < 1.3,
                http-conduit >= 2.3.8 && < 2.4,
                network-uri >= 2.6.4 && < 2.7,
                strict >= 0.5 && < 0.6,
                parsec-permutation >= 0.1.2 && < 0.2
  ghc-options:  -Wall
  other-modules:
                ElementBlocker,
                InputParser,
                Network,
                OptionsConverter,
                ParsecExt,
                ParserExtTests,
                Paths_adblock2privoxy,
                PatternConverter,
                PolicyTree,
                PopupBlocker,
                ProgramOptions,
                SourceInfo,
                Statistics,
                Task,
                Templates,
                UrlBlocker,
                Utils

source-repository this
  type:         git
  location:     https://github.com/essandess/adblock2privoxy.git
  subdir:       adblock2privoxy
  tag:          v2.3.0
